fuck this shit, I go to sleep

--- a/Gateway/Gateway/Properties/Resources.resx
+++ b/Gateway/Gateway/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="gateway" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gateway.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="sqlite.interop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sqlite.interop.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
